[package]
name = "rp-rust-starter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"
test = false

[dependencies]
# Cortex-M ランタイム/低レベル
cortex-m = { version = "0.7.6" }
cortex-m-rt = { version = "0.7.3" }
critical-section = "1.1"

# ログ/パニック/フォーマッタ
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

# Embassy 実行環境/時間/ボード(HAL)
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "time-driver", "critical-section-impl", "rp2040", "boot2-generic-03h"] }

# Pico W のWi‑Fi/LED制御（CYW43）
# 注：ログを抑制したい場合は "defmt", "firmware-logs" を削除
cyw43 = { version = "0.5.0", features = [] }  # defmt, firmware-logs を一時的に無効化
cyw43-pio = { version = "0.8.0", features = [] }  # defmt を一時的に無効化

# ユーティリティ
heapless = "0.8.0"
static_cell = "2.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
fugit = "0.3.7"
portable-atomic = { version = "1.10", features = ["unsafe-assume-single-core"] }

# RP2040 ブートローダ（BOOT2 セクションを提供）
rp2040-boot2 = "0.3"
