[package]
name = "pico-w-id-beacon"
version = "0.1.0"
edition = "2021"
resolver = "2"
autobins = false

[dependencies]
# Embassy core
embassy-executor = { version = "0.9.1", default-features = false, features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.5.0", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7", features = ["defmt"] }

# CYW43 (Pico W WiFi/BT)
cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }

# BLE Host (TrouBLE)
trouble-host = { git = "https://github.com/embassy-rs/trouble", default-features = true, features = ["scan", "defmt"] }
bt-hci = { version = "0.4" }

# Logging / panic
defmt = "1.0.0"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Cortex-M runtime
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
static_cell = "2.1.0"
portable-atomic = { version = "1.7", features = ["critical-section"] }
heapless = "0.9"

[dev-dependencies]
# For host-side unit tests of adv_payload
pretty_assertions = "1.4"

[features]
# Optionally allow building without bundling firmware (for compile-checks on CI)
skip-cyw43-firmware = []

[profile.release]
debug = 2
lto = true
codegen-units = 1

[[bin]]
name = "main"
path = "src/main.rs"
